test/bjy/_unsupported/ill-typed/record_intersection.reasons.s
(
Intersection_types
Operator_misuse
)